--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap"> 
+  <link rel="apple-touch-icon" href="ecommerce_site/media/computer-icon.png">
   <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
   {% endblock %}
 
@@ -103,8 +104,18 @@
         </li>
       </ul>
       </div>
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
       </div>
-      </header>
+      <div class="row bg-white">
+        <nav class="navbar navbar-expand-lg navbar-light w-100">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            {% include 'includes/mobile-top-header.html' %}
+            {% include 'includes/main-nav.html' %}
+        </nav>
+    </div>
+    </header>
 
   {% if messages %}
   <div class="message-container"></div>
