Added adjust bag and remove from the bag views, and calc subtotal template filter

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -30,9 +30,9 @@
                 Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="accessories-link">
-                <a href="{% url 'products' %}?category=mother_boards" class="dropdown-item" class="dropdown-item">Mother Boards</a>
-                <a href="{% url 'products' %}?category=ram_harddrives" class="dropdown-item" class="dropdown-item">Ram &amp; Hard Drives</a>
-                <a href="{% url 'products' %}?category=mother_boards,ram_harddrives" class="dropdown-item" class="dropdown-item">All Accessories</a>
+                <a href="{% url 'products' %}?category=mother-boards" class="dropdown-item" class="dropdown-item">Mother Boards</a>
+                <a href="{% url 'products' %}?category=ram-harddrives" class="dropdown-item" class="dropdown-item">Ram &amp; Hard Drives</a>
+                <a href="{% url 'products' %}?category=mother-boards,ram-harddrives" class="dropdown-item" class="dropdown-item">All Accessories</a>
             </div>
         </li>
 
