Media files added to the project

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,9 +19,9 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="laptops-link">
                 <a href="{% url 'products' %}?category=acers-laptop" class="dropdown-item" class="dropdown-item">Acers</a>
-                <a href="{% url 'products' %}?category=compaqs-laptop" class="dropdown-item" class="dropdown-item">Compaqs</a>
+                <a href="{% url 'products' %}?category=hps-laptop" class="dropdown-item" class="dropdown-item">Hp Laptops</a>
                 <a href="{% url 'products' %}?category=lenovos-laptop" class="dropdown-item" class="dropdown-item">Lenovos</a>
-                <a href="{% url 'products' %}?category=acers-laptop,compaqs-laptop,lenovos-laptop" class="dropdown-item" class="dropdown-item">All Laptops</a>
+                <a href="{% url 'products' %}?category=acers-laptop,hps-laptop,lenovos-laptop" class="dropdown-item" class="dropdown-item">All Laptops</a>
             </div>
         </li>
 
