--- a/templates/base.html
+++ b/templates/base.html
@@ -63,8 +63,8 @@
                     <li class="list-inline-item">
                         <a class="text-black nav-link text-sand" href="{% url 'myblog' %}">
                             <div class="text-center">
-                                <div><i class="fas fa-blog fa-lg"></i></div>
-                                <p class="my-0"> Blogs</p>
+                                <div><i class="fas fa-blog" style="color: #000000;"></i></div>
+                                <p class="my-0" style="color: #000000;"> Blogs</p>
                             </div>
                         </a>
                     </li>
