--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -20,16 +20,16 @@
               </div>
           </form>
       </div>
-  </li>
-  <li class="list-inline-item">
+</li>
+<li class="list-inline-item">
     <a class="text-black nav-link d-block d-lg-none" href="{% url 'myblog' %}">
-       <div class="text-center text-sand">
-          <div><i class="fas fa-blog fa-lg"></i></div>
-          <p class="my-0">Blogs</p>
+       <div class="text-center">
+            <div><i class="fas fa-blog fa-lg"></i></div>
+            <p class="my-0">Blogs</p>
        </div>
     </a>
- </li>
-  <li class="list-inline-item dropdown">
+</li>
+<li class="list-inline-item dropdown">
       <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="text-center">
               <div><i class="fas fa-user fa-lg"></i></div>
@@ -63,4 +63,4 @@
           </div>
       </a>
     </li>
-  </ul>
+  </ul> 
