ppost detail template is modified

--- a/myblog/templates/myblog/post_detail.html
+++ b/myblog/templates/myblog/post_detail.html
@@ -55,5 +55,5 @@
 </div>
 {% endblock content %}
 {% block postloadjs %}
-<script src="{% static 'blog/js/blog_detail.js' %}"></script>
+<script src="{% static 'myblog/js/post_detail.js' %}"></script>
 {% endblock %}
