--- a/myblog/templates/myblog/add_comment.html
+++ b/myblog/templates/myblog/add_comment.html
@@ -19,7 +19,7 @@
                <form method="POST">
                   {% csrf_token %}
                   {{ form.as_p }}
-                  <button class="btn btn-secondary">Add Comment</button>
+                  <button class="btn btn-dark">Add Comment</button>
                </form>
             </div>
          </div>
