checkout/signals, checkout/templates/check.html, checkout succusses are all modified

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="accessories-link">
                 <a href="{% url 'products' %}?category=mother-boards" class="dropdown-item" class="dropdown-item">Mother Boards</a>
                 <a href="{% url 'products' %}?category=ram-harddrives" class="dropdown-item" class="dropdown-item">Ram &amp; Hard Drives</a>
-                <a href="{% url 'products' %}?category=mother-boards,ram-harddrives" class="dropdown-item" class="dropdown-item">All Accessories</a>
+                <a href="{% url 'products' %}?category=mother-boards,v" class="dropdown-item" class="dropdown-item">All Accessories</a>
             </div>
         </li>
 
