--- a/myblog/templates/myblog/myblog.html
+++ b/myblog/templates/myblog/myblog.html
@@ -1,64 +1,68 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% block page_header %}
+{% include 'myblog/myblog_page_header.html' %}
+{% endblock %}
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid">
-<div class="row">
-<div class="col text-center mt-3">
-<h2 class="logo-font">Blogs</h2>
-{% for c in current_categories %}
-<a class="category-badge text-decoration-none" href="{% url 'myblog' %}?category={{ c.name }}">
-<span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
-</a>
-{% endfor %}
-<hr class="w-50 mb-1">
-<!-- Blog Entries Column -->
-<div class="col-12 col-md-10 offset-md-1 blogs-posted">
-   {% for post in post_list %}
-   <div class="card mb-4">
-      <div class="card-body center">
-         <h2 class="card-title">{{ post.title }}</h2>
-         <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on}} </p>
-         <p class="card-text">{{post.content|slice:":200" }}</p>
-         <a href="{% url 'post_detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+   <div class="row">
+      <div class="col text-center mt-3">
+         <h2 class="logo-font">Blogs</h2>
+         {% for c in current_categories %}
+         <a class="category-badge text-decoration-none" href="{% url 'myblog'
+%}?category={{ c.name }}">
+            <span class="p-2 mt-2 badge badge-white text-black rounded-0 border borderdark">{{ c.friendly_name }}</span>
+         </a>
+         {% endfor %}
+         <hr class="w-50 mb-1">
+         <!-- Blog Entries Column -->
+         <div class="col-12 col-md-10 offset-md-1 blogs-posted">
+            {% for post in post_list %}
+            <div class="card mb-4">
+               <div class="card-body center">
+                  <h2 class="card-title">{{ post.title }}</h2>
+                  <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on }}
+                  </p>
+                  <p class="card-text">{{ post.content|slice:":200" }}</p>
+                  <a href="{% url 'post_detail' post.slug %}" class="btn btn-primary">Read
+                     More &rarr;</a>
+               </div>
+            </div>
+            {% endfor %}
+         </div>
+         <div class="btt-button shadow-sm rounded-0 border border-black">
+            <a class="btt-link d-flex h-100">
+               <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+            </a>
+         </div>
       </div>
    </div>
-   {% endfor %}
-</div>
-<div class="btt-button shadow-sm rounded-0 border border-black">
-   <a class="btt-link d-flex h-100">
-   <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
-   </a>	
 </div>
 {% endblock %}
 {% block postloadjs %}
 {{ block.super }}
 <script type="text/javascript">
-   $('.btt-link').click(function(e) {
-   	window.scrollTo(0,0)
+   $('.btt-link').click(function (e) {
+      window.scrollTo(0, 0)
    })
 </script>
 <script type="text/javascript">
-   $('#sort-selector').change(function() {
-       var selector = $(this);
-       var currentUrl = new URL(window.location);
-   
-       var selectedVal = selector.val();
-       if(selectedVal != "reset"){
-           var sort = selectedVal.split("_")[0];
-           var direction = selectedVal.split("_")[1];
-   
-           currentUrl.searchParams.set("sort", sort);
-           currentUrl.searchParams.set("direction", direction);
-   
-           window.location.replace(currentUrl);
-       } else {
-           currentUrl.searchParams.delete("sort");
-           currentUrl.searchParams.delete("direction");
-   
-           window.location.replace(currentUrl);
-       }
+   $('#sort-selector').change(function () {
+      var selector = $(this);
+      var currentUrl = new URL(window.location);
+      var selectedVal = selector.val();
+      if (selectedVal != "reset") {
+         var sort = selectedVal.split("_")[0];
+         var direction = selectedVal.split("_")[1];
+         currentUrl.searchParams.set("sort", sort);
+         currentUrl.searchParams.set("direction", direction);
+         window.location.replace(currentUrl);
+      } else {
+         currentUrl.searchParams.delete("sort");
+         currentUrl.searchParams.delete("direction");
+         window.location.replace(currentUrl);
+      }
    })
 </script>
 {% endblock %}
