--- a/myblog/templates/myblog/delete_comment.html
+++ b/myblog/templates/myblog/delete_comment.html
@@ -5,14 +5,14 @@
 <div class="container-fluid">
    <div class="row">
       <div class="col text-left mt-3">
-         <h2 class="logo-font text-center">Edit a Comment</h2>
+         <h2 class="logo-font text-center">Delete Comment</h2>
          <hr class="w-50 mb-1">
          <div class="col-12 col-md-10 offset-md-1 blogs-posted">
             <div class="form-group">
                <form method="POST">
                   {% csrf_token %}
                   {{ form.as_p }}
-                  <button class="btn btn-secondary">Edit Comment</button>
+                  <button class="btn btn-dark">Delete Comment</button>
                </form>
             </div>
          </div>
