--- a/myblog/templates/myblog/myblog_page_header.html
+++ b/myblog/templates/myblog/myblog_page_header.html
@@ -1,3 +1,7 @@
-{% block page_header %}
-    {% include 'myblog/myblog_page_header.html' %}
+{% block page_header %}    
+   <div class="container header-container">
+      <div class="row">
+         <div class="col"></div>
+      </div>
+   </div>
 {% endblock %}
