--- a/myblog/templates/myblog/delete_comment.html
+++ b/myblog/templates/myblog/delete_comment.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block page_header %}
+    {% include 'myblog/myblog_page_header.html' %}
+{% endblock %}
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid">
