--- a/myblog/templates/myblog/post_detail.html
+++ b/myblog/templates/myblog/post_detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block page_header %}
+    {% include 'myblog/myblog_page_header.html' %}
+{% endblock %}
 {% block content %}
 <div class="container">
    <div class="row">
@@ -23,7 +26,7 @@
                      <p>{{ comment.body }}</p>
                      {% if comment.comment_owner == request.user %}
                      <a href="{% url 'update_comment' pk=comment.id %}" class ="btn-secondary btn"> Edit Comment</a>
-                     <a href="{% url 'delete_comment' pk=comment.id %}" class ="btn-secondary btn"> Delete Comment</a>
+                     <a href="{% url 'delete_comment' pk=comment.id %}" class ="btn-dark btn"> Delete Comment</a>
                      {% endif %}
                      <hr>
                   </div>
