--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,9 +5,9 @@
                 All Products
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item" class="dropdown-item">By Price</a>
-                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item " class="dropdown-item ">By Rating</a>
-                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item" class="dropdown-item ">By Category</a>
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
@@ -18,10 +18,10 @@
 
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="laptops-link">
-                <a href="{% url 'products' %}?category=acers-laptop" class="dropdown-item" class="dropdown-item">Acers</a>
-                <a href="{% url 'products' %}?category=hps-laptop" class="dropdown-item" class="dropdown-item">Hp Laptops</a>
-                <a href="{% url 'products' %}?category=lenovos-laptop" class="dropdown-item" class="dropdown-item">Lenovos</a>
-                <a href="{% url 'products' %}?category=acers-laptop,hps-laptop,lenovos-laptop" class="dropdown-item" class="dropdown-item">All Laptops</a>
+                <a href="{% url 'products' %}?category=acers-laptop" class="dropdown-item">Acers</a>
+                <a href="{% url 'products' %}?category=hps-laptop" class="dropdown-item">Hp Laptops</a>
+                <a href="{% url 'products' %}?category=lenovos-laptop" class="dropdown-item">Lenovos</a>
+                <a href="{% url 'products' %}?category=acers-laptop,hps-laptop,lenovos-laptop" class="dropdown-item">All Laptops</a>
             </div>
         </li>
 
@@ -30,9 +30,9 @@
                 Accessories
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="accessories-link">
-                <a href="{% url 'products' %}?category=mother-boards" class="dropdown-item" class="dropdown-item">Mother Boards</a>
-                <a href="{% url 'products' %}?category=ram-harddrives" class="dropdown-item" class="dropdown-item">Ram &amp; Hard Drives</a>
-                <a href="{% url 'products' %}?category=mother-boards,v" class="dropdown-item" class="dropdown-item">All Accessories</a>
+                <a href="{% url 'products' %}?category=mother-boards" class="dropdown-item">Mother Boards</a>
+                <a href="{% url 'products' %}?category=ram-harddrives" class="dropdown-item">Ram &amp; Hard Drives</a>
+                <a href="{% url 'products' %}?category=mother-boards,v" class="dropdown-item">All Accessories</a>
             </div>
         </li>
 
@@ -41,10 +41,10 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item" class="dropdown-item">New Arrivals</a>
-                <a href="{% url 'products' %}?category=deals" class="dropdown-item" class="dropdown-item">Deals</a>
-                <a href="{% url 'products' %}?category=clearance" class="dropdown-item" class="dropdown-item">Clearance</a>
-                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
