Site link link added to project

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,7 +17,7 @@
                 Laptops
 
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="laptops-link">
+            <div class="dropdown-menu border-0" aria-labelledby="">
                 <a href="{% url 'products' %}?category=acers-laptop" class="dropdown-item">Acers</a>
                 <a href="{% url 'products' %}?category=hps-laptop" class="dropdown-item">Hp Laptops</a>
                 <a href="{% url 'products' %}?category=lenovos-laptop" class="dropdown-item">Lenovos</a>
@@ -29,7 +29,7 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Accessories
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="accessories-link">
+            <div class="dropdown-menu border-0" aria-labelledby="">
                 <a href="{% url 'products' %}?category=mother-boards" class="dropdown-item">Mother Boards</a>
                 <a href="{% url 'products' %}?category=ram-harddrives" class="dropdown-item">Ram &amp; Hard Drives</a>
                 <a href="{% url 'products' %}?category=mother-boards,v" class="dropdown-item">All Accessories</a>
