checkout app modified

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -25,17 +25,16 @@
     color: #aab7c4;
 }
 
-
 .fieldset-label {
     position: relative;
     right: .5rem;
 }
-/* 
+
 #payment-form .form-control,
 #card-element {
-    /* color: #000; */
-    /* border: 1px solid #000; */
-/* } */ 
+    color: #000;
+    border: 1px solid #000;
+}
 
 select,
 select option {
@@ -46,7 +45,6 @@ select:invalid,
 select option[value=""] {
     color: #aab7c4 !important;
 }
-
 
 #loading-overlay {
 	display: none;
