--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -10,6 +12,7 @@
         </div>
     </div>
 {% endblock %}
+
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
@@ -30,6 +33,7 @@
                             <small class="text-muted">Order Info:</small>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Number</p>
@@ -44,9 +48,10 @@
                             <p class="mb-0 text-black font-weight-bold">Order Date</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-0">{{ order.date|date:"d M, Y" }}</p>
+                            <p class="mb-0">{{ order.date }}</p>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Order Details:</small>
